--- a/mastercard-project/app/index.html
+++ b/mastercard-project/app/index.html
@@ -58,6 +58,10 @@
     <script src="components/meal/summary/meal.summary.controller.js"></script>
     <script src="components/meal/scan/meal.scan.controller.js"></script>
 
+
+    <script src="components/checkout/checkout.js"></script>
+    <script src="components/checkout/summary/checkout.summary.controller.js"></script>
+
     <script src="components/common/login/login.directive.js"></script>
     <!-- endbuild -->
   </body>
