Pushed another bunch of stuff

--- a/mastercard-project/app/index.html
+++ b/mastercard-project/app/index.html
@@ -61,8 +61,12 @@
 
     <script src="components/checkout/checkout.js"></script>
     <script src="components/checkout/summary/checkout.summary.controller.js"></script>
+    <script src="components/checkout/complete/checkout.complete.controller.js"></script>
 
-    <script src="components/common/login/login.directive.js"></script>
+    <script src="components/common/login/login.js"></script>
+    <script src="components/common/login/login.controller.js"></script>
+
+    <script src="components/main/main.js"></script>
     <!-- endbuild -->
   </body>
 </html>
